--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ html {
 		background-color: #111212;
 	}
 
+	.cardPics {
+		height: 350px;
+		width: 300px;
+	}
+
+	.cardPicsTwo {
+		height: 200px;
+		width: 300px;
+	}
+
 	.subheader {
 		width: 200px;
 		margin: auto;
@@ -76,6 +86,16 @@ html {
 		font-size: 300%;
 		color: #0292a8;
 		background-color: #111212;
+	}
+
+	.cardPics {
+		height: 380px;
+		width: 350px;
+	}
+
+	.cardPicsTwo {
+		height: 230px;
+		width: 350px;
 	}
 
 	.subheader {
@@ -95,6 +115,16 @@ html {
 		background-color: #111212;
 	}
 
+	.cardPics {
+		height: 400px;
+		width: 380px;
+	}
+
+	.cardPicsTwo {
+		height: 250px;
+		width: 380px;
+	}
+
 	.subheader {
 		width: 325px;
 		margin: auto;
@@ -110,6 +140,16 @@ html {
 		font-size: 300%;
 		color: #0292a8;
 		background-color: #111212;
+	}
+
+	.cardPics {
+		height: 400px;
+		width: 350px;
+	}
+
+	.cardPicsTwo {
+		height: 230px;
+		width: 350px;
 	}
 
 	.subheader {
@@ -142,6 +182,16 @@ html {
 		font-size: 500%;
 		color: #0292a8;
 		background-color: #111212;
+	}
+
+	.cardPics {
+		height: 500px;
+		width: 450px;
+	}
+
+	.cardPicsTwo {
+		height: 300px;
+		width: 450px;
 	}
 
 	.subheader {
